--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "developer-vs.brackets_html_boilerplate",
+    "name": "html_boilerplate",
     "title": "HTML Boilerplate",
-    "description": "Basic HTML template, similar to Sublime. Use Ctrl-Shift-I to insert template or go to the menu Edit -> HTML Boilerplate.",
+    "description": "Basic HTML template, similar to Sublime. Use Ctrl-Alt-I to insert template or go to the menu Edit -> HTML Boilerplate.",
     "homepage": "https://github.com/developer-vs/brackets_html_boilerplate",
     "version": "1.0.0",
     "author": "vs",
