--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-    "name": "html_boilerplate",
+    "name": "html-boilerplate",
     "title": "HTML Boilerplate",
-    "description": "Basic HTML template, similar to Sublime. Use Ctrl-Alt-I to insert template or go to the menu Edit -> HTML Boilerplate.",
-    "homepage": "https://github.com/developer-vs/brackets_html_boilerplate",
     "version": "1.0.1",
-    "author": "vs",
-    "license": "http://www.apache.org/licenses/LICENSE-2.0",
-    "engines": { "brackets": ">=0.24.0" }
+    "description": "Basic HTML template, similar to Sublime. Use Ctrl-Alt-I to insert template or go to the menu Edit -> HTML Boilerplate.",
+    "homepage": "https://github.com/developer-vs/brackets_html_boilerplate",    
+    "author": "vs (https://github.com/developer-vs)",
+    "license": "MIT",
+    "categories": "editing",
+    "keywords": [
+        "html",    
+        "coding",
+        "editing"
+    ],
+    "engines": { 
+        "brackets": ">=0.24.0" 
+    }
 }
