--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "html-boilerplate",
+    "name": "brackets-html-boilerplate",
     "title": "HTML Boilerplate",
     "version": "1.0.0",
     "description": "This extension displays basic HTML template, similar to Sublime. Use Ctrl-Alt-I to insert template or go to the menu Edit -> HTML Boilerplate.",
