--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version": "1.0.0",
     "description": "This extension displays basic HTML template, similar to Sublime. Use Ctrl-Alt-I to insert template or go to the menu Edit -> HTML Boilerplate.",
     "homepage": "https://github.com/developer-vs/brackets_html_boilerplate",    
-    "author": "Vladimir Semenovich (https://github.com/developer-vs/brackets_html_boilerplate)",
+    "author": "Vladimir Semenovich (https://github.com/developer-vs)",
     "license": "MIT",
     "categories": "editing",
     "keywords": [
