--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "brackets-html-boilerplate",
     "title": "HTML Boilerplate",
-    "version": "1.0.1",
-    "description": "This extension displays basic HTML template, similar to Sublime. Use Ctrl-Alt-I to insert template or go to the menu Edit -> HTML Boilerplate.",
+    "version": "1.0.2",
+    "description": "This is an extension which allows you to insert an HTML template, similar to Sublime. Type 'html' and hit the 'Tab' key",
     "homepage": "https://github.com/developer-vs/brackets_html_boilerplate",    
     "author": "Vladimir Semenovich (https://github.com/developer-vs)",
     "license": "MIT",
