--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "brackets-html-boilerplate",
     "title": "HTML Boilerplate",
-    "version": "1.0.4",
-    "description": "This is an extension which allows you to insert an HTML template, similar to Sublime. Type 'html' and hit the 'Tab' key",
+    "version": "1.0.5",
+    "description": "This is an extension which allows you to insert an HTML template, similar to Sublime. Type 'html' and hit the 'Tab' key", for MAC users "Cmd (⌘) + ]",
     "homepage": "https://github.com/developer-vs/brackets_html_boilerplate",    
     "author": "Vladimir Semenovich (https://github.com/developer-vs)",
     "license": "MIT",
